--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,15 +30,15 @@ jobs:
       - run:
           name: Initial build
           command: ./gradlew clean assembleDebug --no-daemon --stacktrace
-      - store_artifacts:
-          path: app/build/reports
-          destination: reports
+#      - store_artifacts:
+#          path: app/build/reports
+#          destination: reports
       - store_artifacts:
           path: app/build/reports/tests/testDebugUnitTest/packages
           destination: unittests/
-      - store_artifacts:
-          path: app/build/outputs/apk/
-          destination: apks/
-      - store_test_results:
-          path: app/build/test-results
+#      - store_artifacts:
+#          path: app/build/outputs/apk/
+#          destination: apks/
+#      - store_test_results:
+#          path: app/build/test-results
       
